# k8s-mutatingwebhook

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
certs/: webhook.crt  webhook.key
k8s/: deployment.yaml  mutatingwebhookconfiguration.yaml  secret.yaml  service.yaml
tests/: flasktestpod.yaml  test_webhook.py
tests/test-simple-flask/: Dockerfile  app.py  index.html
